# waseda-credit-calculator

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/prompts/: add-course-data.prompt.md
.github/workflows/: bump-version.yaml
wcc/: main.py  utils.py
wcc/data/: courses.py  graduation_requirements.py
wcc/data/models/: __init__.py  course.py  graduation_requirement.py  major.py
